syntax = "proto3";

package github.com.Artenso.Geo_Service.user.api;

option go_package = "github.com/Artenso/Geo-Service/user/pkg/user_service";

import "google/protobuf/empty.proto";

service UserService  {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
	rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
	rpc DeleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
	rpc ListUsers(ListUsersRequest) returns (ListUsersResponse);
	rpc GetUserByNameAndPass(GetUserByNameAndPassRequest) returns (GetUserByNameAndPassResponse);
}

message User {
    int64 id = 1;
    string username = 2;
    string password = 3;
}

message CreateUserRequest {
    string username = 1;
    string password = 2;
}

message CreateUserResponse {
    int64 id = 1;
}

message GetUserByIDRequest {
    int64 id = 1;
}

message GetUserByIDResponse {
    User user = 1;
}

message DeleteUserRequest {
    int64 id = 1;
}

message ListUsersRequest {
    int64 limit = 1;
    int64 offset = 2;
}

message ListUsersResponse {
    repeated User users = 1;
}

message GetUserByNameAndPassRequest {
    string username = 1;
    string password = 2;
    
}

message GetUserByNameAndPassResponse {
    User user = 1;
}
